--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   <modules>
     <module>examples-kafka</module>
     <module>examples-spark</module>
+    <module>examples-flink</module>
   </modules>
   
   <name>HopsExamples</name>
