--- a/examples-spark/pom.xml
+++ b/examples-spark/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
     <version>0.1</version>
-    <relativePath>../../..</relativePath>
+    <relativePath>../../examples</relativePath>
   </parent>
 
   <groupId>io.hops</groupId>
