--- a/examples-kafka/pom.xml
+++ b/examples-kafka/pom.xml
@@ -5,10 +5,8 @@
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
     <version>0.1</version>
-    <relativePath>../../examples</relativePath>
   </parent>
 
-  <groupId>io.hops</groupId>
   <artifactId>hops-kafka</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
@@ -40,4 +38,24 @@
     </dependency>
   </dependencies>
   <name>HopsKafka</name>
+  
+  <repositories>
+    <repository>
+      <id>sics-snapshot-repository</id>
+      <name>SICS Release Repository</name>
+      <url>http://kompics.sics.se/maven/snapshotrepository</url>
+      <releases>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>sics-release-repository</id>
+      <name>SICS Release Repository</name>
+      <url>http://kompics.sics.se/maven/repository</url>
+      <releases>
+      </releases>
+    </repository>
+  </repositories>
 </project>
