--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>examples-kafka</module>
     <module>examples-spark</module>
     <module>examples-flink</module>
+    <module>examples-beam</module>
   </modules>
   
   <name>HopsExamples</name>
