--- a/examples-kafka/pom.xml
+++ b/examples-kafka/pom.xml
@@ -21,6 +21,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+         <configuration>
+          <archive>
+            <manifest>
+              <mainClass>io.hops.examples.kafka.FlinkKafkaExample</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -36,6 +43,11 @@
       <artifactId>kafka-util</artifactId>
       <version>0.1</version>
     </dependency>
+<!--    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-connector-kafka-base_2.10</artifactId>
+      <version>1.0.3</version>
+    </dependency>-->
   </dependencies>
   <name>HopsKafka</name>
   
