--- a/examples-kafka/pom.xml
+++ b/examples-kafka/pom.xml
@@ -21,7 +21,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-         <configuration>
+        <configuration>
           <archive>
             <manifest>
               <mainClass>io.hops.examples.kafka.FlinkKafkaStreamingExample</mainClass>
@@ -43,11 +43,11 @@
       <artifactId>kafka-util</artifactId>
       <version>0.1</version>
     </dependency>
-<!--    <dependency>
+    <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-connector-kafka-base_2.10</artifactId>
+      <artifactId>flink-connector-filesystem_2.10</artifactId>
       <version>1.0.3</version>
-    </dependency>-->
+    </dependency>
   </dependencies>
   <name>HopsKafka</name>
   
