--- a/examples-flink/pom.xml
+++ b/examples-flink/pom.xml
@@ -38,5 +38,15 @@
       <artifactId>flink-streaming-java_2.10</artifactId>
       <version>1.0.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-connector-filesystem_2.10</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>io.hops</groupId>
+      <artifactId>kafka-util</artifactId>
+      <version>0.1</version>
+    </dependency>
   </dependencies>
 </project>
