--- a/examples-spark/pom.xml
+++ b/examples-spark/pom.xml
@@ -24,8 +24,23 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.10</artifactId>
-      <version>1.6.1</version>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.11</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.hops</groupId>
+      <artifactId>kafka-util</artifactId>
+      <version>0.1</version>
     </dependency>
   </dependencies>
 </project>
