--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -59,7 +59,7 @@
     </dependency>
     <dependency>
       <groupId>io.hops</groupId>
-      <artifactId>kafka-util</artifactId>
+      <artifactId>hopsworks-util</artifactId>
       <version>0.1</version>
     </dependency>
   </dependencies>
