--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -107,7 +107,7 @@
     </dependency>
     <dependency>
       <groupId>io.hops</groupId>
-      <artifactId>kafka-util</artifactId>
+      <artifactId>hopsworks-util</artifactId>
       <version>0.1</version>
     </dependency>
   </dependencies>
