--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -27,7 +27,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>io.hops.examples.flink.IterateExample</mainClass>
+                  <mainClass>io.hops.examples.flink.kafka.StreamingExample</mainClass>
                 </transformer>
               </transformers>
             </configuration>
