--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.0</version>
       <exclusions>
         <exclusion> 
           <groupId>org.apache.hadoop</groupId>
@@ -57,17 +57,22 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch-spark_2.11</artifactId>
+      <version>2.4.1</version>
     </dependency>
     <dependency>
       <groupId>io.hops</groupId>
