--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -20,7 +20,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>io.hops.examples.spark.kafka.StreamingExample</mainClass>
+              <mainClass>io.hops.examples.spark.kafka.StreamingLogs</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.1.0</version>
+      <version>2.1.1</version>
       <exclusions>
         <exclusion> 
           <groupId>org.apache.hadoop</groupId>
@@ -57,17 +57,17 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.1.0</version>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-      <version>2.1.0</version>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>2.1.0</version>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>io.hops</groupId>
