--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,27 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.hops</groupId>
   <artifactId>hops-examples</artifactId>
-  <version>0.1</version>
+  <version>0.1.1</version>
   <packaging>pom</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <name>HopsExamples</name>
+
   
+  <dependencies>
+    <dependency>
+      <groupId>io.hops</groupId>
+      <artifactId>hops-util</artifactId>
+      <version>0.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.hops</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>2.7.3</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
