--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -4,13 +4,18 @@
   <parent>
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
-    <version>0.1</version>
+    <version>0.1.1</version>
   </parent>
 
   <artifactId>hops-spark</artifactId>
-  <version>0.1</version>
+  <version>0.1.1</version>
   <packaging>jar</packaging>
   <name>HopsSpark</name>
+
+  <properties>
+    <spark.version>2.2.0</spark.version>
+  </properties>
+
   
   <build>
     <plugins>
@@ -41,7 +46,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>${spark.version}</version>
       <exclusions>
         <exclusion> 
           <groupId>org.apache.hadoop</groupId>
@@ -50,29 +55,19 @@
       </exclusions> 
     </dependency>
     <dependency>
-      <groupId>io.hops</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>2.4.0</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>${spark.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>${spark.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>2.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>io.hops</groupId>
-      <artifactId>hops-util</artifactId>
-      <version>0.1</version>
-    </dependency>
+      <version>${spark.version}</version>
+      </dependency>
   </dependencies>
 </project>
