--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
-    <version>0.1.0</version>
+    <version>0.3.0</version>
   </parent>
 
-  <artifactId>hops-flink</artifactId>
+  <artifactId>flink-hops-examples</artifactId>
   <packaging>jar</packaging>
-  <name>HopsFlink</name>
+  <name>flink-hops-examples</name>
   
   <build>
     <plugins>
