--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -7,15 +7,14 @@
     <version>0.3.0</version>
   </parent>
 
-  <artifactId>spark-hops-examples</artifactId>
+  <artifactId>hive-hops-examples</artifactId>
   <packaging>jar</packaging>
-  <name>spark-hops-examples</name>
+  <name>hive-hops-examples</name>
 
   <properties>
-    <spark.version>2.2.0</spark.version>
+    <hive.version>2.3.0</hive.version>
   </properties>
 
-  
   <build>
     <plugins>
       <plugin>
@@ -43,30 +42,9 @@
   
   <dependencies>
     <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.11</artifactId>
-      <version>${spark.version}</version>
-      <exclusions>
-        <exclusion> 
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-client</artifactId>
-        </exclusion>
-      </exclusions> 
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming_2.11</artifactId>
-      <version>${spark.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-      <version>${spark.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.11</artifactId>
-      <version>${spark.version}</version>
+      <groupId>io.hops.hive</groupId>
+      <artifactId>hive-jdbc</artifactId>
+      <version>${hive.version}</version>
     </dependency>
   </dependencies>
 </project>
