--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.hops</groupId>
   <artifactId>hops-examples</artifactId>
-  <version>0.1.0</version>
+  <version>0.3.0</version>
   <packaging>pom</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <name>HopsExamples</name>
+  <name>hops-examples</name>
 
   
   <dependencies>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>io.hops</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.8.2.2</version>
+      <version>2.8.2.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -50,17 +50,38 @@
           <scmVersionType>branch</scmVersionType>
         </configuration>
       </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.16</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <suppressionsLocation>/tools/maven/suppressions.xml</suppressionsLocation>
+          <suppressionsFileExpression>/checkstyle.suppressions.file</suppressionsFileExpression>
+          <configLocation>/tools/maven/checkstyle.xml</configLocation>
+          <logViolationsToConsole>true</logViolationsToConsole>
+          <failsOnError>true</failsOnError>
+          <consoleOutput>true</consoleOutput>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   
   <modules>
     <module>spark</module>
     <module>flink</module>
-    <module>beam</module>
+    <module>hive</module>
   </modules>
   
-
-
 
   <repositories>
     <repository>
@@ -103,4 +124,5 @@
     <downloadUrl>http://kompics.i.sics.se/maven/repository</downloadUrl>
   </distributionManagement>
 
+  
 </project>
