--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -7,9 +7,9 @@
     <version>0.3.0</version>
   </parent>
 
-  <artifactId>spark-hops-examples</artifactId>
+  <artifactId>hops-examples-spark</artifactId>
   <packaging>jar</packaging>
-  <name>spark-hops-examples</name>
+  <name>hops-examples-spark</name>
 
   <properties>
     <spark.version>2.2.0</spark.version>
