--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
   </parent>
 
   <artifactId>hops-examples-hive</artifactId>
