Improving hive example

--- a/hive/src/main/resources/io/hops/examples/hive_credentials.properties.example
+++ b/hive/src/main/resources/io/hops/examples/hive_credentials.properties.example
@@ -1,7 +1,6 @@
-hive_url=jdbc:hive2://[domain]:[port]
-dbname=[database_name]
-truststore_path=[path_to_truststore]
+hive_url=jdbc:hive2://[domain]:[port] #default port:9085
+dbname=[database_name] #the name of the Dataset in Hopsworks, omitting the ".db" suffix.
+truststore_path=[absolute_path_to_truststore]
+keystore_path=[absolute_path_to_keystore]
 truststore_pw=[truststore_password]
-hopsworks_username=[hopsworks_username]
-hopsworks_pw=[hopsworks_password]
-
+keystore_pw=[keystore_password]
