--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
   <packaging>pom</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spark.version>2.3.2</spark.version>
+    <scala.base>2.11</scala.base>
   </properties>
   <name>hops-examples</name>
 
@@ -35,6 +37,24 @@
       <groupId>io.hops</groupId>
       <artifactId>hadoop-client</artifactId>
       <version>2.8.2.6</version>
+    </dependency>
+        <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${scala.base}</artifactId>
+      <version>${spark.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-client</artifactId>
+        </exclusion>
+      </exclusions>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scala.base}</artifactId>
+      <version>${spark.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
