--- a/featurestore/pom.xml
+++ b/featurestore/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
-    <version>0.8.1-SNAPSHOT</version>
+    <version>0.8.1</version>
   </parent>
 
   <artifactId>hops-examples-featurestore</artifactId>
