--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>io.hops</groupId>
     <artifactId>hops-examples</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
   </parent>
 
   <artifactId>hops-examples-flink</artifactId>
