--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spark.version>2.4.0</spark.version>
     <scala.base>2.11</scala.base>
+    <hops.version>2.8.2.7</hops.version>
   </properties>
   <name>hops-examples</name>
 
@@ -33,11 +34,13 @@
       <groupId>io.hops</groupId>
       <artifactId>hops-util</artifactId>
       <version>0.10.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.hops</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.8.2.6</version>
+      <version>${hops.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
@@ -61,10 +64,33 @@
 
   <build>
     <plugins>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-jar-plugin</artifactId>-->
+        <!--<version>2.3</version>-->
+      <!--</plugin>-->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <appendAssemblyId>false</appendAssemblyId>
+          <archive>
+            <manifest>
+              <mainClass>fully.qualified.MainClass</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -113,7 +139,6 @@
 
   <modules>
     <module>spark</module>
-    <module>flink</module>
     <module>hive</module>
     <module>featurestore</module>
   </modules>
