--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spark.version>2.4.0</spark.version>
     <scala.base>2.11</scala.base>
+    <scala.version>2.11.12</scala.version>
     <hops.version>2.8.2.7</hops.version>
   </properties>
   <name>hops-examples</name>
@@ -58,6 +59,12 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.base}</artifactId>
       <version>${spark.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
