--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <spark.version>2.4.0</spark.version>
     <scala.base>2.11</scala.base>
     <scala.version>2.11.12</scala.version>
-    <hops.version>2.8.2.7</hops.version>
+    <hops.version>2.8.2.8-SNAPSHOT</hops.version>
   </properties>
   <name>hops-examples</name>
 
