[HOPSWORKS-1097][Featurestore] Parameterize dataset-dir in tour job

--- a/featurestore/pom.xml
+++ b/featurestore/pom.xml
@@ -27,6 +27,14 @@
   <packaging>jar</packaging>
   <name>hops-examples-featurestore</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.rogach</groupId>
+      <artifactId>scallop_${scala.base}</artifactId>
+      <version>3.3.0</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <!--<plugin>-->
