[HOPSWORKS-1642] Upgrade to TensorFlow 2.2.0 and PyTorch 1.5.1 (#140)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target/
+*/target/
 /examples-kafka/target/
 /examples-spark/target/
 /examples-flink (copy)/target/
@@ -11,6 +12,7 @@
 .idea/*
 *.iml
 */.idea/*
-
+*.ipynb_checkpoints
+*.ipynb_checkpoints/*
 # MacOS
 .DS_Store
